Fixing `event/list` behaviour on mobile (again)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@
 // https://medium.freecodecamp.org/css-naming-conventions-that-will-save-you-hours-of-debugging-35cea737d849
 
 .col--events {
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     position: absolute;
     left:     0;
   }
